<resources>
    <string name="app_name">philips</string>
    <string name="name">Enter username</string>
    <string name="password">Enter password</string>
    <string name="button">Login</string>
    <string name="instructions" translatable="false">my instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>