...
        android:onClick="clickHandler"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:hint="@string/name"
...
